# qhawariy

./: .dockerignore  .flake8  .gitignore  Dockerfile  LICENSE  README.md  app.py  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt  seed.py
files/data/: 4coord.csv  5coord.csv  coord.txt
files/shapefile/: rutas_ETMS_tc-34.dbf  rutas_ETMS_tc-34.shp  rutas_ETMS_tc-34.shx
instance/: config.py
migrations/versions/: 14c5bd9cd46a_.py  3293505a8320_.py  61e075a4d46e_.py  817b2058651a_.py  8eb5b815e691_.py
nginx/conf.d/: qhawariy.conf
qhawariy/: __init__.py
qhawariy/controllers/: admin.py  auth.py  control.py  control_tiempo.py  coordenadas.py  estadistica.py  home.py  notificacion.py  permiso_vehiculo.py  programacion.py  propietario.py  ruta.py  vehiculo.py  viaje.py
qhawariy/forms/: admin_form.py  auth_form.py  control_form.py  permiso_form.py  programacion_form.py  propietario_form.py  propietario_vehiculo_form.py  rol_form.py  ruta_form.py  viaje_form.py
qhawariy/models/: __init__.py  asociado.py  configuracion.py  control.py  control_tiempo.py  departamento.py  disponible_vehiculo.py  distrito.py  fecha.py  notificacion.py  plan_salida.py  planificacion.py  programacion.py  propietario.py  propietario_vehiculo.py  provincia.py  proxima_ruta.py  punto_salida.py  rol.py  ruta.py  ruta_terminal.py  secuencia_control_ruta.py  terminal.py  usuario.py  usuario_rol.py  vehiculo.py  vehiculo_programado.py  viaje.py
qhawariy/services/: __init__.py
qhawariy/templates/: 401.html  (+5 more)
tests/: conftest.py  test_api.http  test_factory.py  test_routes.py
(+111 files in other folders)
