[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qhawariy"
version = "1.0"
authors = [
  { name="Peter Pilen Quispe Mendoza", email="peterqm@hotmail.com" },
]
description = "Sistema para la administración y control de flotas de vehículos de transporte público"
readme = "README.md"
requires-python = ">=3.12.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = ""
Issues = ""

[tool.pytest.ini_options]
pythonpath = "qhawariy"
testpaths=["tests"]

[test.coverage.run]
branch=true
source=["qhawariy"]